fix CSS theme issue in dark mode

--- a/docs/packages/muc-directory/muc-directory.css
+++ b/docs/packages/muc-directory/muc-directory.css
@@ -10,6 +10,7 @@
   padding: 5px !important;
   margin: 5px !important;  
   background: #EEE;
+  color:black;    
 }
 .pade-col-content {
   display: flex;
